# GraphComputing

./: README.md  example.edgelist  outfile
ligra/: CMakeCache.txt  CMakeLists.txt  Makefile  bfs  bfs.cpp  cmake_install.cmake  ligra.h
universal/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  convert  convert.cpp  graph.h  utils.h
